--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -19,10 +19,11 @@
     <%= f.label :content %><br>
     <%= f.text_area :content %>
   </div>
-<!--   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div> -->
+  <div class="field">
+    <%= f.label :pic %><br>
+    <%= f.file_field :pic %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
