--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -13,5 +13,10 @@
   <%= @micropost.user_id %>
 </p>
 
+<p>
+  <strong>Pic:</strong>
+  <%= image_tag @micropost.pic.url(:medium) %>
+</p>
+
 <%= link_to 'Edit', edit_micropost_path(@micropost) %> |
 <%= link_to 'Back', microposts_path %>
