--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= micropost.title %></td>
         <td><%= micropost.content %></td>
-        <td><%= micropost.user_id %></td>
+        <td><%= micropost.user.name %></td>
         <td><%= link_to 'Show', micropost %></td>
         <% if micropost.user == current_user %>
           <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
