--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -57,6 +57,15 @@
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions";
 
+// Nunito font import - similar to avenir
+// @import url(http://fonts.googleapis.com/css?family=Nunito:400,300,700);
+
+// Roboto Condensed
+// @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400,300,700);
+
+// Open Sans
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,400);
+
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
 
@@ -96,14 +105,14 @@ $include-html-global-classes: $include-html-classes;
 // $font-weight-bold: bold !default;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
-// $secondary-color: #e7e7e7;
+$primary-color: #23F2C4;
+$secondary-color: #0CC7E8;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
 
-// $white       : #FFFFFF;
+$white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
@@ -120,14 +129,14 @@ $include-html-global-classes: $include-html-classes;
 // $charcoal    : #555555;
 // $tuatara     : #444444;
 // $oil         : #333333;
-// $jet         : #222222;
+$jet: #4A4A4A;
 // $black       : #000000;
 
 // We use these to control various global styles
 // $body-bg: $white;
-// $body-font-color: $jet;
-// $body-font-family: $font-family-sans-serif;
-// $body-font-weight: $font-weight-normal;
+$body-font-color: $jet;
+$body-font-family: 'Open Sans', sans-serif;
+$body-font-weight: 400;
 // $body-font-style: normal;
 
 // We use this to control font-smoothing
@@ -205,12 +214,12 @@ $include-html-global-classes: $include-html-classes;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
-// $h2-font-size: rem-calc(37);
-// $h3-font-size: rem-calc(27);
-// $h4-font-size: rem-calc(23);
-// $h5-font-size: rem-calc(18);
-// $h6-font-size: 1rem;
+$h1-font-size: rem-calc(44);
+$h2-font-size: rem-calc(37);
+$h3-font-size: rem-calc(27);
+$h4-font-size: rem-calc(23);
+$h5-font-size: rem-calc(18);
+$h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
 // $h1-font-reduction: rem-calc(10) !default;
@@ -1361,8 +1370,8 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: $oil;
-// $topbar-bg: $topbar-bg-color;
+// $topbar-bg-color: $white;
+$topbar-bg: $primary-color;
 
 // Height and margin
 // $topbar-height: 45px;
@@ -1441,3 +1450,47 @@ $include-html-global-classes: $include-html-classes;
 // $include-accessibility-classes: true;
 
 @import 'foundation';
+
+
+// CUSTOM CLASSES!!!!!
+
+.vertically-align {
+	vertical-align: middle;
+}
+
+.title {
+	font-size: $h5-font-size;
+	a {
+		color: $white !important;
+	}
+}
+
+.fa { 
+	line-height: inherit !important;
+	color: $white;
+}
+
+.post-title {
+	font-weight: 600;
+
+}
+
+.post-author {
+	font-weight: 300;
+}
+
+#new-post-title {
+	box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0) !important;
+	border: 0px solid white !important;
+	resize: none;
+	font-size: $h2-font-size;
+	color: $jet;
+}
+
+#new-post-content {
+	box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0) !important;
+	border: 0px solid white !important;
+	resize: none;
+	color: $jet;
+}
+
