--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -11,20 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_area :title %>
+  <div class ="row">
+    <div class = "small-12 columns">
+      <div class="field" id="new-post-title">
+        <%= f.text_area :title, placeholder: "Enter your title", id: "new-post-title" %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+  <div class ="row">
+    <div class = "small-12 columns">
+      <div class="field">
+        <%= f.text_area :content, placeholder: "Okay, tell us the story..", id: "new-post-content", rows:"4", cols:"100" %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :pic %><br>
-    <%= f.file_field :pic %>
+  <div class ="row">
+    <div class = "small-12 columns">
+      <div class="field">
+        <%= f.file_field :pic %>
+      </div>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class ="row">
+    <div class = "small-12 columns">
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+    </div>
   </div>
 <% end %>
