--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,51 +1,11 @@
-<div class ="row">
-  <h1>Listing Microposts</h1>
-</div>
-
 
 <% @microposts.each do |micropost| %>
   <div class ="row">
     <div class = "small-12 medium-10 large-8 columns">
+      <h5 class = "post-author"> <%= micropost.user.name %> </h5>
       <%= image_tag micropost.pic.url(:medium) %>
-      <h3> <%= micropost.title %> </h3>
-      <h5> <%= micropost.user.name %> </h5>
+      <h2 class = "post-title"> <%= micropost.title %> </h2>
       <p> <%= micropost.content %> </p>
     </div>
   </div>
 <% end %>
-
-
-
-
-
-<!-- <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @microposts.each do |micropost| %>
-      <tr>
-        <td><%= micropost.title %></td>
-        <td><%= micropost.content %></td>
-        <td><%= micropost.user.name %></td>
-        <td><%= link_to 'Show', micropost %></td>
-        <% if micropost.user == current_user %>
-          <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-          <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
- -->
-<div class ="row">
-  <%= link_to 'New Micropost', new_micropost_path %>
-</div>
