--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Micropost</h1>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', microposts_path %>
+<div class = "row">
+	<div class = "small-12 columns">
+		<%= link_to 'Cancel', microposts_path %>
+	</div>
+</div>
+
