--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -3,7 +3,7 @@
 <%= render 'form' %>
 
 <div class = "row">
-	<div class = "small-12 columns">
+	<div class = "small-12 columns text-center">
 		<%= link_to 'Cancel', microposts_path %>
 	</div>
 </div>
