--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@micropost) do |f| %>
+<%= form_for @micropost, html: { multipart: true } do |f| %>
   <% if @micropost.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@micropost.errors.count, "error") %> prohibited this micropost from being saved:</h2>
@@ -21,22 +21,21 @@
   <div class ="row">
     <div class = "small-12 columns">
       <div class="field">
-        <%= f.text_area :content, placeholder: "Okay, tell us the story..", id: "new-post-content", rows:"4", cols:"100" %>
+        <%= f.text_area :content, placeholder: "Okay, tell us the story..", id: "new-post-content", rows:"12", cols:"50" %>
       </div>
     </div>
   </div>
   <div class ="row">
     <div class = "small-12 columns">
-      <div class="field">
+      <h6> Upload a picture </h6>
         <%= f.file_field :pic %>
-      </div>
     </div>
-  </div>
+  </div><br/>
 
   <div class ="row">
-    <div class = "small-12 columns">
+    <div class = "small-12 columns text-center">
       <div class="actions">
-        <%= f.submit %>
+        <%= f.submit "Submit Post", id:'new-post-submit'%>
       </div>
     </div>
   </div>
