edit and delete for user microposts

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1484,6 +1484,7 @@ $topbar-bg: $primary-color;
 	font-weight: 300;
 	font-size: $paragraph-font-size;
 	color: #CECBCF;
+	text-align: right;
 }
 
 #new-post-title {
