--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -26,6 +26,7 @@
 <%= render "comments/form" %>
  
 
-
-<%= link_to 'Edit', edit_micropost_path(@micropost) %> |
+<% if @micropost.user == current_user %>
+	<%= link_to 'Edit', edit_micropost_path(@micropost) %> |
+<% end %>
 <%= link_to 'Back', microposts_path %>
