--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Micropost</h1>
+<div class = "row">
+	<div class = "small-12 columns">
+		<h1>Editing Your Post</h1>
+	</div>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @micropost %> |
-<%= link_to 'Back', microposts_path %>
+<div class = "row">
+	<div class ="small-12 columns">
+		<%= link_to 'Cancel', microposts_path %>
+	</div>
+</div>
