--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,8 @@
 
       <aside class="left-off-canvas-menu">
         <ul class="off-canvas-list">
-          <li><label>Foundation</label></li>
-          <li><a href="#">The Psychohistorians</a></li>
-          <li><a href="#">...</a></li>
+          <li><label>Your Family</label></li>
+          <li> <%= current_user.name %> </li>
         </ul>
       </aside>
 
