--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -4,11 +4,8 @@
       <div class ="row">
         <div class = "small-12 columns">
           <div class = "row">
-            <div class = "small-9 columns">
-              <h5 class = "post-author"> <%= micropost.user.name %> </h5>
-            </div>
-            <div class = "small-3 columns">
-              <h6 class = "post-date"><%= micropost.created_at.strftime("%b %d") %></h6>
+            <div class = "small-12 columns">
+              <h5 class = "post-author"> <%= link_to micropost.user.name, micropost.user %> <span class = "post-date"> | <%= micropost.created_at.strftime("%b %d") %></span></h5>
             </div>
           </div>
           <div class = "row">
