--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @micropost, html: { multipart: true } do |f| %>
+<%= simple_form_for @micropost, html: { multipart: true } do |f| %>
   <% if @micropost.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@micropost.errors.count, "error") %> prohibited this micropost from being saved:</h2>
@@ -35,7 +35,7 @@
   <div class ="row">
     <div class = "small-12 columns text-center">
       <div class="actions">
-        <%= f.submit "Submit Post", id:'new-post-submit'%>
+        <%= f.button :submit, "Submit Post"%>
       </div>
     </div>
   </div>
