--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -64,7 +64,7 @@
 // @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400,300,700);
 
 // Open Sans
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,400);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,400);
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
