--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,16 +7,14 @@
         <tr>
           <th>Name</th>
           <th>Email</th>
-          <th colspan="3"></th>
         </tr>
       </thead>
 
       <tbody>
         <% @users.each do |user| %>
           <tr>
-            <td><%= user.name %></td>
+            <td><%= link_to user.name, user %></td>
             <td><%= user.email %></td>
-            <td><%= link_to 'Show', user %></td>
           </tr>
         <% end %>
       </tbody>
