--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,17 +14,6 @@
  *= require_self
  *= require foundation_and_overrides
  *= require font-awesome
+ *= require addtohomescreen
 
  */
-
-.progress {
-  max-width: 600px;
-  margin:    0.2em 0 0.2em 0;
-}
-
-.progress .bar {
-  height:  1.2em;
-  padding: 0.2em;
-  color:   white;
-  display: none;
-}
