spacing between posts

--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -29,6 +29,13 @@
               </p>
             </div>
           </div>
+          <div class = "row">
+            <div class = "small-12 columns">
+              <p>
+                <%= link_to "View Comments (#{micropost.comments.count})", micropost %><br/><br/>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     <% end %>
