--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,3 +1,49 @@
+<div class ="row">
+<div class = "small-12 columns">
+  <div class = "row">
+    <div class = "small-12 columns">
+      <h5 class = "post-author"> <%= link_to @micropost.user.name, @micropost.user %> <span class = "post-date"> | <%= @micropost.created_at.strftime("%b %d") %></span></h5>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "small-12 columns">
+      <%= image_tag @micropost.pic.url(:large) if @micropost.pic.file? %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "small-12 columns">
+      <h2 class = "post-title"> <%= @micropost.title %> </h2>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "small-12 columns">
+      <p> <%= @micropost.content %>
+      <% if @micropost.user == current_user %>
+        <br/>
+        <%= link_to 'Edit', edit_micropost_path(@micropost) %> | 
+        <%= link_to "Delete", @micropost, method: :delete, data: { confirm: "You sure?" } %>
+      <% end %>
+      </p>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "small-12 columns">
+		<h2>Comments</h2>
+		<%= render @micropost.comments %>
+	 
+		<h2>Add a comment:</h2>
+		<%= render "comments/form" %>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+<!-- 
+
+
+
 <p>
   <strong>Title:</strong>
   <%= @micropost.title %>
@@ -30,3 +76,4 @@
 	<%= link_to 'Edit', edit_micropost_path(@micropost) %> |
 <% end %>
 <%= link_to 'Back', microposts_path %>
+ -->
