--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,9 @@
-<%= form_for([@micropost, @micropost.comments.build]) do |f| %>
+<%= simple_form_for ([@micropost, @micropost.comments.build]) do |f| %>
   <%= f.hidden_field :commenter, value: current_user.name %>
   <p>
-    <%= f.label :body %><br>
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %>
+   <%= f.button :submit, "Submit Comment" %>
   </p>
 <% end %>
