--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for ([@micropost, @micropost.comments.build]) do |f| %>
   <%= f.hidden_field :commenter, value: current_user.name %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
   <p>
     <%= f.text_area :body %>
   </p>
