changed find_by_id for comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,5 @@
 <p>
-  <% id = comment.user_id %>
-  <% user = User.find_by_id(params[:id]) %>
+  <% user = User.find_by_id(comment.user_id) %>
   <%= link_to user.name, user %><br/>
   <%= comment.body %><br/>
 <% if user == current_user %>
